# ModelCraft-Expedition

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/models/transformers/: index.md  vit.md
notebooks/models/transformers/: vit.ipynb  vit.ju.py
src/modelcraft_expedition/models/transformers/: vit.py
