[project]
name = "modelcraft-expedition"
version = "0.1.0"
description = "Documenting my journey implementing various AI architectures and algorithms from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "jupynium>=0.2.6",
    "nbclassic>=1.2.0",
    "notebook>=7.4.0",
]

[tool.uv]
package = true
